Добавлены контентные изображения

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -57,17 +57,17 @@
   <section>
     <h2>Галерея</h2>
     <figure>
-      <img src="#" alt="Набор для путешествий «Baxter of California»">
+      <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="461" height="499">
     </figure>
     <ul>
       <li>
-        <img src="#" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/1-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
       </li>
       <li>
-        <img src="#" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/2-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
       </li>
       <li>
-        <img src="#" alt="Набор для путешествий «Baxter of California»">
+        <img src="img/3-item.jpg" alt="Набор для путешествий «Baxter of California»" width="140" height="149">
       </li>
     </ul>
   </section>
