--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
         <li>
           <article>
             <a href="catalog-item.html">
-              <img src="" alt="Набор для путешествий «Baxter of California»">
+              <img src="img/1-shop.jpg" alt="Набор для путешествий «Baxter of California»" width="220" height="165">
             </a>
             <h4>Набор для путешествий «Baxter of California»</h4>
             <div>
@@ -76,7 +76,7 @@
         <li>
           <article>
             <a href="#">
-              <img src="#" alt="Увлажняющий кондиционер «Baxter of California»">
+              <img src="img/2-shop.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
             </a>
             <h4>Увлажняющий кондиционер «Baxter of California»</h4>
             <div>
@@ -88,7 +88,7 @@
         <li>
           <article>
             <a href="#">
-              <img src="#" alt="Гель для волос «SUAVECITO»">
+              <img src="img/3-shop.jpg" alt="Гель для волос «SUAVECITO»" width="220" height="165">
             </a>
             <h4>Гель для волос «SUAVECITO»</h4>
             <div>
@@ -100,7 +100,7 @@
         <li>
           <article>
             <a href="#">
-              <img src="#" alt="Глина для укладки волос «American crew»">
+              <img src="img/4-shop.jpg" alt="Глина для укладки волос «American crew»" width="220" height="165">
             </a>
             <h4>Глина для укладки волос «American crew»</h4>
             <div>
@@ -112,7 +112,7 @@
         <li>
           <article>
             <a href="#">
-              <img src="#" alt="Гель для волос«AMERICAN CREW»">
+              <img src="img/5-shop.jpg" alt="Гель для волос«AMERICAN CREW»">
             </a>
             <h4>Гель для волос «AMERICAN CREW»</h4>
             <div>
@@ -124,7 +124,7 @@
         <li>
           <article>
             <a href="#">
-              <img src="#" alt="Набор для бритья«Baxter of California»">
+              <img src="img/6-shop.jpg" alt="Набор для бритья«Baxter of California»" width="220" height="165">
             </a>
             <h4>Набор для бритья «Baxter of California»</h4>
             <div>
